# django-simple-counter

./: README.md  manage.py  pyproject.toml
accounts/: forms.py  models.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_usermodel_is_authenticated.py  0003_remove_usermodel_is_authenticated_and_more.py
accounts/templates/accounts/: base.html  home.html  login.html  register.html
counter/: models.py
counter/migrations/: 0001_initial.py  0002_rename_count_countermodel_press_count.py
simplecounter/: asgi.py  settings.py  urls.py  wsgi.py
